k8s/simple-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-controller-service
spec:
  type: ClusterIp
  selector:
    app: simple-controller
  ports:
    - port: 9002
      targetPort: 9001
