k8s/ingress-service.yml
apiVersion: extensions/v1betal
kind: Ingress
metadata:
  name: localingress
  annotations:
    kubernetes.io/ingress.class : nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: simple-controller-service
              servicePort: 9002
